// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render 1`] = `
<div>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 1
              </div>
              <div
                class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 2
              </div>
              <div
                class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render empty rows if template not provided 1`] = `
<div>
  <div
    class="sc-AxirZ jhHiEf -mt-3"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
          role="row"
        >
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 1
              </div>
              <div
                class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder "
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Header 2
              </div>
              <div
                class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;
